# Contrax

./: .gitignore  .pre-commit-config.yaml  CHANGELOG.md  CONTRIBUTING.md  LICENSE  README.md  pyproject.toml  zensical.toml
.github/workflows/: ci.yml  deploy-docs.yml
contrax/: __init__.py  _ekf.py  _estimation_diagnostics.py  _kalman.py  _mhe.py  _place.py  _precision.py  _riccati.py  _ukf.py  analysis.py  control.py  core.py  estimation.py  interconnect.py  nonlinear.py  parameterization.py  phs.py  sim.py  simulation.py  systems.py  types.py
contrax/compat/: __init__.py  python_control.py
docs/: getting-started.md  index.md
docs/api/: analysis.md  control.md  estimation.md  simulation.md  systems.md  types.md
docs/assets/javascripts/: mathjax.js
docs/assets/stylesheets/: extra.css
docs/examples/: continuous-nonlinear-estimation.md  foh-estimation.md  jax-native-workflows.md  lqr-optimal-execution.md  nonlinear-mhe.md  sc42095-reference.md  structured-nonlinear-estimation.md
docs/how-to/: batch-controller-design.md  build-mhe-objective.md  handle-missing-measurements.md  tune-lqr-with-gradients.md
docs/templates/python/material/: attribute.html.jinja  class.html.jinja  function.html.jinja  signature.html.jinja  type_alias.html.jinja  type_parameters.html.jinja
docs/theory/: discretization-and-linearization.md  estimation-pipelines.md  jax-transform-contract.md  riccati-solvers.md
docs/tutorials/: continuous-lqr.md  differentiable-lqr.md  kalman-filtering.md  linearize-lqr-simulate.md
examples/: continuous_lqr.py  continuous_nonlinear_estimation.py  differentiable_lqr.py  foh_estimation.py  kalman_filtering.py  linearize_lqr_simulate.py  lqr_optimal_execution.py  nonlinear_mhe.py  pendulum_gif.py  sc42095_reference.py  structured_nonlinear_estimation.py
tests/: conftest.py  test_analysis.py  test_control.py  test_core.py  test_estimation.py  test_examples.py  test_interconnect.py  test_linearize.py  test_public_modules.py  test_sim.py
