[build-system]
requires = ["setuptools>=69", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "contrax"
version = "0.1.0"
description = "JAX-native control theory library"
readme = "README.md"
requires-python = ">=3.11"
authors = [
    {name = "Givani Boekestijn", email = "givaniboek@gmail.com"},
]
license = {text = "MIT"}
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3 :: Only",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Scientific/Engineering",
]
dependencies = [
    "diffrax>=0.7.2",
    "equinox>=0.13.6",
    "jax>=0.9.2",
    "lineax>=0.0.8",
    "optimistix>=0.1.0",
]

[project.urls]
Homepage = "https://github.com/givani30/Contrax"
Repository = "https://github.com/givani30/Contrax"
"Bug Tracker" = "https://github.com/givani30/Contrax/issues"

[project.optional-dependencies]
dev = [
    "build>=1.2.2",
    "matplotlib>=3.10.8",
    "mkdocstrings-python>=2.0.3",
    "pillow>=12.2.0",
    "pre-commit>=4.0.1",
    "pytest>=9.0.3",
    "pytest-xdist>=3.8.0",
    "ruff>=0.11.13",
    "zensical>=0.0.32",
]

[tool.pytest.ini_options]
testpaths = ["tests"]

[tool.ruff]
target-version = "py311"
line-length = 88
src = ["contrax", "tests", "examples"]

[tool.ruff.lint]
select = ["E", "F", "I"]

[tool.ruff.lint.isort]
known-first-party = ["contrax"]

[tool.ruff.lint.per-file-ignores]
"examples/*.py" = ["E402"]
"scripts/*.py" = ["E501"]

[tool.setuptools.packages.find]
include = ["contrax*"]

[dependency-groups]
dev = [
    "build>=1.2.2",
    "matplotlib>=3.10.8",
    "mkdocstrings-python>=2.0.3",
    "pillow>=12.2.0",
    "pre-commit>=4.0.1",
    "pytest>=9.0.3",
    "pytest-xdist>=3.8.0",
    "ruff>=0.11.13",
    "zensical>=0.0.32",
]
